[project]
name = "dataoncallenv"
version = "2.0.0"
description = "RL environment for data pipeline debugging agents"
authors = [
    { name = "RLBenchmarkingTeam" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.8.2",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tqdm>=4.67.3",
    "openenv-core>=0.2.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
server = "dataoncallenv.api.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
